# Sovereign-Path-Imperium

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  taste.md  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  elevation.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: details.rs  export.rs  links.rs  mod.rs  scan.rs  shell.rs  validate.rs  volumes.rs
src-tauri/src/db/: history.rs  migrations.rs  mod.rs
src-tauri/target-debug-temp/: .rustc_info.json
src-tauri/target-debug-temp/debug/.fingerprint/adler2-6586caa2360024ca/: lib-adler2  lib-adler2.json
src-tauri/target-debug-temp/debug/.fingerprint/ahash-5dab6632c03e754b/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-debug-temp/debug/.fingerprint/ahash-834d9a55cab632b5/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-debug-temp/debug/.fingerprint/ahash-f3cd44dca3c41b50/: lib-ahash  lib-ahash.json
src-tauri/target-debug-temp/debug/.fingerprint/aho-corasick-c5b4dc4a1828ae39/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-debug-temp/debug/.fingerprint/alloc-no-stdlib-d7495d5de183ec04/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-debug-temp/debug/.fingerprint/alloc-stdlib-ce2fbf70a1e0f3ff/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-debug-temp/debug/.fingerprint/anyhow-8136da6f7b89b28f/: lib-anyhow  lib-anyhow.json
src-tauri/tests/: windows_links.rs
(+762 files in other folders)
