[package]
name = "symview"
version = "0.1.0"
description = "NTFS links desktop utility"
authors = ["dwnmf"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
csv = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
walkdir = "2"
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
